--- a/config.toml
+++ b/config.toml
@@ -54,7 +54,7 @@ disableLanguages        = [""]
       width               = "80"
 
   [params.sidebar]
-    about               = "记录成长."
+    about               = "菜鸟成长录."
     postAmount          = 5
     categories          = true
     categoriesByCount   = false
@@ -92,64 +92,57 @@ disableLanguages        = [""]
     weight            = 2
 
   [[menu.main]]
-    name              = "关于"
-    identifier        = "about"
-    url               = "/about/"
-    pre               = "<i class='far fa-id-card'></i>"
-    weight            = 3
-
-  [[menu.main]]
     name              = "分类"
     identifier        = "categories"
     url               = "/categories/"
     pre               = "<i class='fas fa-sitemap'></i>"
-    weight            = 5
+    weight            = 3
 
   [[menu.main]]
-    name              = "联系人"
-    identifier        = "contact"
-    url               = "/contact/"
-    pre               = "<i class='far fa-envelope'></i>"
-    weight            = 6
+    name              = "关于"
+    identifier        = "about"
+    url               = "/about/"
+    pre               = "<i class='far fa-id-card'></i>"
+    weight            = 5
 
 [Languages]
 
-  [Languages.zh-cn]
-    LanguageCode        = "zh-cn"
+  [Languages.zh-CN]
+    LanguageCode        = "zh-CN"
     LanguageName        = "Simplified Chinese"
     title               = "修行路，山海行"
     description         = "漫漫修行，茫茫山海."
     weight              = 1
 
-    [[Languages.zh-cn.menu.main]]
+    [[Languages.zh-CN.menu.main]]
       name              = "主页"
       identifier        = "home"
       url               = "/"
       pre               = "<i class='fas fa-home'></i>"
       weight            = 1
 
-    [[Languages.zh-cn.menu.main]]
+    [[Languages.zh-CN.menu.main]]
       name              = "博客"
       identifier        = "blog"
       url               = "/blog/"
       pre               = "<i class='far fa-newspaper'></i>"
       weight            = 2
 
-    [[Languages.zh-cn.menu.main]]
+    [[Languages.zh-CN.menu.main]]
       name              = "关于"
       identifier        = "about"
       url               = "/about/"
       pre               = "<i class='far fa-id-card'></i>"
       weight            = 3
 
-    [[Languages.zh-cn.menu.main]]
+    [[Languages.zh-CN.menu.main]]
       name              = "类别"
       identifier        = "categories"
       url               = "/categories/"
       pre               = "<i class='fas fa-sitemap'></i>"
       weight            = 5
 
-    [[Languages.zh-cn.menu.main]]
+    [[Languages.zh-CN.menu.main]]
       name              = "联系人"
       identifier        = "contact"
       url               = "/contact/"
@@ -167,7 +160,7 @@ disableLanguages        = [""]
   codepen               = ""
   # Visual Art Communities
   deviantart            = ""
-  flickr                = "example"
+  flickr                = ""
   behance               = ""
   dribbble              = ""
   # Publishing Communities
@@ -180,7 +173,7 @@ disableLanguages        = [""]
   xing                  = ""
   slideshare            = ""
   # Social Networks
-  facebook              = "example"
+  facebook              = ""
   googleplus            = ""
   reddit                = ""
   quora                 = ""
@@ -189,11 +182,10 @@ disableLanguages        = [""]
   whatsapp              = "" # WhatsApp Number
   # WeChat and QQ need testing.
   wechat                = "example"
-  qq                    = "example" # User ID Number
-  weibo					= "example"
+  qq                    = "1006642655" # User ID Number
   instagram             = ""
   tumblr                = ""
-  twitter               = "example"
+  twitter               = ""
   strava                = ""
   skype                 = ""
   snapchat              = ""
@@ -203,6 +195,6 @@ disableLanguages        = [""]
   googlescholar         = ""
   orcid                 = ""
   researchgate          = ""
-  mastodon              = "example.com/@example"
+  mastodon              = ""
   # Email
   email                 = "coderqs@gmail.com"
