修改了配置文件中logo的路径

--- a/config.toml
+++ b/config.toml
@@ -49,7 +49,7 @@ disableLanguages        = [""]
     alwaysOnHomepage      = true
 
     [params.intro.pic]
-      src                 = "img/main/logo.jpg"
+      src                 = "img/logos/studyhard.jpeg"
       shape               = "circle"
       width               = "80"
 
